--- a/24hrAssignmentAPI/24hrAssignmentAPI.csproj
+++ b/24hrAssignmentAPI/24hrAssignmentAPI.csproj
@@ -213,7 +213,6 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -306,6 +305,20 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\24hrAssignment.Data\24hrAssignment.Data.csproj">
+      <Project>{60db6615-8199-4477-b012-a3eaebbf919b}</Project>
+      <Name>24hrAssignment.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\24hrAssignment.Models\24hrAssignment.Models.csproj">
+      <Project>{bf9107f3-0179-4f34-9be4-232a00e1560f}</Project>
+      <Name>24hrAssignment.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\24hrAssignment.Services\24hrAssignment.Services.csproj">
+      <Project>{5aa7210d-42a4-4f81-ae4a-e6111d47ea6b}</Project>
+      <Name>24hrAssignment.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
